ros2_prj/ros2_pr_ws/log/build_2026-04-28_13-35-23/pr_hello/stderr.log
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp: In constructor ‘TestNode::TestNode(const std::string&)’:
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:26:68: error: no matching function for call to ‘create_client<user_interfaces::srv::User>(const char [13])’
   26 |         client_ = rclcpp::create_client<user_interfaces::srv::User>("test_service");
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:38,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:1663,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors.hpp:22,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:172,
                 from /home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:6:
/opt/ros/jazzy/include/rclcpp/rclcpp/create_client.hpp:43:1: note: candidate: ‘template<class ServiceT> typename rclcpp::Client<ServiceT>::SharedPtr rclcpp::create_client(std::shared_ptr<node_interfaces::NodeBaseInterface>, std::shared_ptr<node_interfaces::NodeGraphInterface>, std::shared_ptr<node_interfaces::NodeServicesInterface>, const std::string&, const QoS&, CallbackGroup::SharedPtr)’
   43 | create_client(
      | ^~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/create_client.hpp:43:1: note:   candidate expects 4 arguments, 1 provided
/opt/ros/jazzy/include/rclcpp/rclcpp/create_client.hpp:62:1: note: candidate: ‘template<class ServiceT> typename rclcpp::Client<ServiceT>::SharedPtr rclcpp::create_client(std::shared_ptr<node_interfaces::NodeBaseInterface>, std::shared_ptr<node_interfaces::NodeGraphInterface>, std::shared_ptr<node_interfaces::NodeServicesInterface>, const std::string&, const rmw_qos_profile_t&, CallbackGroup::SharedPtr)’
   62 | create_client(
      | ^~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/create_client.hpp:62:1: note:   candidate expects 6 arguments, 1 provided
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:28:70: error: no matching function for call to ‘create_service<user_interfaces::srv::User>(const char [13], std::_Bind_helper<false, void (TestNode::*)(std::shared_ptr<user_interfaces::srv::User_Request_<std::allocator<void> > >, std::shared_ptr<user_interfaces::srv::User_Response_<std::allocator<void> > >), TestNode*, const std::_Placeholder<1>&, const std::_Placeholder<2>&>::type)’
   28 |         service_ = rclcpp::create_service<user_interfaces::srv::User>("test_service", std::bind(&TestNode::service_callback, this, std::placeholders::_1, std::placeholders::_2));
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:42:
/opt/ros/jazzy/include/rclcpp/rclcpp/create_service.hpp:43:1: note: candidate: ‘template<class ServiceT, class CallbackT> typename rclcpp::Service<ServiceT>::SharedPtr rclcpp::create_service(std::shared_ptr<node_interfaces::NodeBaseInterface>, std::shared_ptr<node_interfaces::NodeServicesInterface>, const std::string&, CallbackT&&, const QoS&, CallbackGroup::SharedPtr)’
   43 | create_service(
      | ^~~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/create_service.hpp:43:1: note:   candidate expects 6 arguments, 2 provided
/opt/ros/jazzy/include/rclcpp/rclcpp/create_service.hpp:60:1: note: candidate: ‘template<class ServiceT, class CallbackT> typename rclcpp::Service<ServiceT>::SharedPtr rclcpp::create_service(std::shared_ptr<node_interfaces::NodeBaseInterface>, std::shared_ptr<node_interfaces::NodeServicesInterface>, const std::string&, CallbackT&&, const rmw_qos_profile_t&, CallbackGroup::SharedPtr)’
   60 | create_service(
      | ^~~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/create_service.hpp:60:1: note:   candidate expects 6 arguments, 2 provided
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp: In member function ‘void TestNode::callback(std_msgs::msg::String_<std::allocator<void> >::ConstSharedPtr)’:
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:49:33: error: ‘meg’ was not declared in this scope; did you mean ‘msg’?
   49 |     request->req1 = "get msg" + meg->data;
      |                                 ^~~
      |                                 msg
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:52:64: error: ‘cline_request_callback’ is not a member of ‘TestNode’
   52 |     client_ = async_send_request(request, std::bind(&TestNode::cline_request_callback, this, std::placeholders::_1));
      |                                                                ^~~~~~~~~~~~~~~~~~~~~~
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:52:15: error: ‘async_send_request’ was not declared in this scope; did you mean ‘rmw_send_request’?
   52 |     client_ = async_send_request(request, std::bind(&TestNode::cline_request_callback, this, std::placeholders::_1));
      |               ^~~~~~~~~~~~~~~~~~
      |               rmw_send_request
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp: In member function ‘void TestNode::service_callback(user_interfaces::srv::User_Request_<std::allocator<void> >::SharedPtr, user_interfaces::srv::User_Response_<std::allocator<void> >::SharedPtr)’:
/home/chacha/code/repo/ChaChaOpen/ros2_prj/ros2_pr_ws/src/pr_hello/src/test.cpp:65:54: error: invalid operands of types ‘const char [25]’ and ‘const char [27]’ to binary ‘operator+’
   65 |         response->resp1 = "test_service response >>" + "request received which is " + request->req1;
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                           |                            |
      |                           const char [25]              const char [27]
gmake[2]: *** [CMakeFiles/test_node.dir/build.make:76: CMakeFiles/test_node.dir/src/test.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:167: CMakeFiles/test_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
